# Page_analyzer

./:  database.sql  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: ci.yml
page_analyzer/: app.py  db.py  forms.py  models.py  parse_url.py
page_analyzer/templates/: index.html  page404.html  url_check.html  urls.html
page_analyzer/templates/layout/: default.html  flash.html  header.html
